force-app/main/default/objects/SL_Escalation_Prediction__c/SL_Escalation_Prediction__c.object-meta.xml
<CustomObject>
    <label>Escalation Prediction</label>
    <nameField>
        <label>Escalation Prediction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escalation Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>