force-app/main/default/objects/SL_Escalation_Prediction__c/fields/SL_Escalation_Prediction_Probability__c.field-meta.xml
<CustomField>
    <fullName>SL_Escalation_Prediction_Probability__c</fullName>
    <label>Escalation prediction probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>