force-app/main/default/objects/SL_Escalation_Prediction__c/fields/SL_Is_Predicted_To_Escalate__c.field-meta.xml
<CustomField>
    <fullName>SL_Is_Predicted_To_Escalate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is predicted to escalate</label>
    <type>Checkbox</type>
</CustomField>