force-app/main/default/objects/SL_Escalation_Prediction__c/fields/SL_Prediction_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SL_Prediction_Timestamp__c</fullName>
    <label>Prediction timestamp</label>
    <type>DateTime</type>
</CustomField>