force-app/main/default/objects/SL_Escalation_Prediction__c/fields/SL_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>SL_Ticket_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is lookup to Case</description>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Escalation Predictions</relationshipLabel>
    <relationshipName>Escalation_Predictions</relationshipName>
    <type>Lookup</type>
</CustomField>